--- a/mock/login.html
+++ b/mock/login.html
@@ -8,6 +8,24 @@
   <link rel="stylesheet" href="common.css" type="text/css"> </head>
 
 <body>
+  <nav class="navbar navbar-expand-md bg-primary navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"><i class="fa d-inline fa-lg fa-cloud"></i><b>  Brand</b></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+      <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fa d-inline fa-lg fa-bookmark-o"></i> Bookmarks</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fa d-inline fa-lg fa-envelope-o"></i> Contacts</a>
+          </li>
+        </ul>
+        <a class="btn navbar-btn ml-2 text-white btn-secondary" href="input.html"><i class="fa d-inline fa-lg fa-user-circle-o"></i> ログイン </a>
+      </div>
+    </div>
+  </nav>
   <div class="h-100 opaque-overlay" style="background-image: url(&quot;cafe.jpg&quot;);">
     <div class="container py-5">
       <div class="row">
@@ -18,25 +36,6 @@
           <p class="lead mb-5">翌週以降のお弁当を注文します。
             <br>過去の注文履歴も多少見れます。
             <br> </p>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-5">
-          <div class="card text-white p-5 bg-primary">
-            <div class="card-body">
-              <h1 class="mb-4">Login form</h1>
-              <form action="">
-                <div class="form-group"> <label>Email address</label>
-                  <input type="email" class="form-control" placeholder="Enter email"> </div>
-                <div class="form-group"> <label>Password</label>
-                  <input type="password" class="form-control" placeholder="Password"> </div>
-                <button type="submit" class="btn btn-secondary">Login</button>
-              </form>
-            </div>
-          </div>
         </div>
       </div>
     </div>
