--- a/mock/list.html
+++ b/mock/list.html
@@ -18,7 +18,10 @@
             <a class="nav-link" href="input.html">注文入力</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="list.html">注文履歴</a>
+            <a class="nav-link" href="list.html">注文履歴（管理部）</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="list_p.html">注文履歴（個人）</a>
           </li>
         </ul>
         <p class="navbar-text my-1">ようこそ 永和太郎 さん。</p>
