--- a/vue/src/index.html
+++ b/vue/src/index.html
@@ -27,6 +27,8 @@
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
+
+    <script src="https://apis.google.com/js/platform.js"></script>
   </head>
   <body>
     <noscript>
